@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-00
+2013-03-29 Andy Salnikov
+- add support for one-stream input of Xtc files
+
 Tag: V00-08-03
 2013-03-04 Andy Salnikov
 - fixing doxygen comments fo XtcStreamMerger constructor
